Handle modules requiring additional input

--- a/client/src/components/ModuleBoard.scss
+++ b/client/src/components/ModuleBoard.scss
@@ -91,14 +91,14 @@
 .workflow-operations {
     width: 100%;
     min-height: 30px;
-    margin: 3rem 0;
+    margin: 1rem 0;
     padding: 0.5rem;
     display: block;
     border: 1px solid white;
     border-radius: 5px;
     background-color: transparent;
     color: white;
-    font-weight: bold;
+    letter-spacing: 1px;
     text-align: center;
     line-height: 1.5rem;
 }
