--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -39,6 +39,11 @@
 
     --header-height: 60px;
 
+    --break-small: 360px;
+    --break-medium: 780px;
+    --break-large: 1200px;
+    --break-huge: 1800px;
+
     --darkColor: rgb(51, 67, 80);
     --darkColorOverlay-1: rgba(51, 67, 80, 0.75);
     --darkColorOverlay-2: rgba(51, 67, 80, 0.5);
