--- a/client/src/components/WorkflowModuleCard.scss
+++ b/client/src/components/WorkflowModuleCard.scss
@@ -64,4 +64,13 @@
         font-size: 1.3rem;
         font-weight: 300;
     }
+
+    .user-input {
+        display: block;
+        margin: 0.5rem auto;
+
+        input {
+            margin-left: 0.5rem;
+        }
+    }
 }
